# open-pnp-head

./: .gitignore  README.md
firmware/: CMakeLists.txt  README.md  openocd.cfg  stm32-f1xx.cmake
firmware/drivers/: CMakeLists.txt
firmware/drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_hal_uart.h
firmware/include/: config.h  cpu_map.h  functions.h
firmware/include/peripheral/: endstops.h  relay.h  vacuum.h
firmware/include/stm32/: stm32_cpu_map.h  stm32_interrupts.h  stm32_routines.h
firmware/include/system/: callbacks.h  control.h  macros.h  modbus.h  modbus_control.h  modbus_impl.h  motion.h  parser.h  report.h  serial.h  settings.h  state.h  stepper.h  system.h  text_control.h
firmware/lib/: STM32F103C8Tx_FLASH.ld
firmware/src/: functions.cpp  main.cpp
firmware/src/peripheral/: endstops.cpp  relay.cpp  vacuum.cpp
firmware/src/stm32/: stm32_interrupts.cpp  stm32_routines.cpp
firmware/src/system/: control.cpp  modbus.cpp  modbus_control.cpp  modbus_impl.cpp  motion.cpp  report.cpp  serial.cpp  settings.cpp  state.cpp  stepper.cpp  system.cpp  text_control.cpp
hardware/stm32-head/: TCST.kicad_sym  stepper_drivers.kicad_sch  stm32-head.kicad_pcb  stm32-head.kicad_prl  stm32-head.kicad_pro  stm32-head.kicad_sch  sym-lib-table
hardware/stm32-head/TCST.pretty/: TCST-1103.kicad_mod
hardware/stm32-head/XGZP_Sensors.pretty/: XGZP_Sensor_THT.kicad_mod
